# crablink

./: .gitignore  ANDROID_TV_NOTES.MD  CHANGELOG.md  CODEBUNDLE_CHROME_EXTENSION.md  CONTRIBUTING.md  CRABLINK_TV_BUILDPLAN.MD  DISCLAIMER.md  NOTES.MD  NOTICE  OLD_NOTES.MD  OLD_NOTES2.MD  README.md  SECURITY.md  package-lock.json  package.json  scaffold_crablink.sh  vite.config.js
.license-backups/20260612T190058Z/apps/crablink-tauri/src-tauri/: Cargo.toml
apps/crablink-tauri/src-tauri/: Cargo.toml  Info.plist  NOTICE  tauri.conf.json
apps/crablink-tauri/src-tauri/capabilities/: default.json
apps/crablink-tauri/src-tauri/src/: confirmed_roc.rs  lib.rs  lib.rs.bak-audio-resync-cleanup-20260604-194211  main.rs  state.rs
apps/crablink-tauri/src-tauri/src/commands/: assets.rs  diagnostics.rs  gateway.rs  health.rs  identity.rs  local_node.rs  media.rs  media.rs.bak-audio-resync-cleanup-20260604-194211  media.rs.bak-make-audio-mix-20260604-161756  mod.rs  oap_object.rs  operator_moderation_review.rs  operator_node.rs  operator_persistence_review.rs  operator_reward_binding.rs  resolve.rs  settings.rs  stream.rs  user_node_verification.rs  wallet.rs
apps/crablink-tauri/src-tauri/src/deeplink/: mod.rs
apps/crablink-tauri/src-tauri/src/gateway/: mod.rs
apps/crablink-tauri/src-tauri/src/media/: limits.rs  make_export.rs  make_export.rs.bak-audio-resync-cleanup-20260604-194211  make_export.rs.bak-make-audio-mix-20260604-161756  make_export.rs.before-ffprobe-output-validity-guard  make_export.rs.before-force-silent-audio-export  make_export.rs.before-preserve-source-audio  mod.rs  video_jobs.rs  video_probe.rs  (+4 more)
apps/crablink-tauri/src-tauri/tests/: phase22_confirmed_roc_projection.rs  phase22_live_lifecycle_isolation.rs  phase22_live_oap_object.rs  phase22_live_operator_attachment.rs  phase22_live_operator_reviews.rs  phase22_live_user_node_verification.rs  phase23_privacy_relay_unavailable.rs
apps/crablink-tv/src-tauri/: Cargo.toml  tauri.conf.json
apps/crablink-tv/src-tauri/capabilities/: tv.json
apps/crablink-tv/src-tauri/src/: lib.rs  main.rs
(+777 files in other folders)
