[package]
name = "crablink-tauri"
version = "0.1.0"
description = "CrabLink Tauri native client"
authors = ["RustyOnions contributors"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "crablink_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
