[package]
name = "crablink-tv"
version = "0.1.0"
description = "Remote-first CrabLink TV client."
authors = ["Stevan White"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "crablink_tv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
